# agent_assistant_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_phase1_user_system.py  003_phase2_agent_tool_model.py  004_phase3_knowledge_base.py  005_phase4_workflow_rename.py  006_phase5_execution_indexes.py  007_phase6_templates_logs_env.py  008_phase7_dashboard_api.py  009_fix_provider_api_key_text.py
app/: main.py
app/api/: deps.py  router.py
app/core/: api_key_auth.py  celery_app.py  config.py  cookies.py  database.py  encryption.py  exceptions.py  logging.py  redis.py  security.py  seed.py  storage.py  tool_security.py  transport_crypto.py
app/middleware/: __init__.py  auth.py  error_handler.py  rate_limiter.py  request_log.py  (+1 more)
docs/: README.md
scripts/: deploy.sh
tests/: conftest.py  test_agents.py  test_api_key.py  test_auth_cookie.py  test_auth_login.py  test_auth_refresh.py  test_auth_register.py  test_create_provider_kwargs.py  test_db_schema.py  test_env_var_key.py  test_execution_topo.py  test_health.py  test_knowledge.py  test_models.py  test_node_test.py  test_rate_limit_logic.py  test_search_scoring.py  test_teams.py  test_text_chunker.py  test_text_extractor.py  test_tools.py  test_transport_crypto.py  test_users.py  test_variable_resolver.py  test_vector_search.py  test_version_diff.py  test_workflow_import_export.py  test_workflow_validation.py  test_workflow_versions.py  test_workflows.py
(+136 files in other folders)
